# predictorVerse

./: .gitignore  8v9w_lig.sdf  README.md  RFAA.py  af3.py  boltz1.py  boltz1x.py  chai.py  info.py  jobscripts.py  main.py  nb-sm-set.csv  nb-sm-set_v1.csv  nb-sm-set_v2.csv  nb-sm-set_v3.csv  nb-sm-set_v3.json  omegafold.py  pyproject.toml  test.csv  test.ipynb  test.json  test.py  test2.csv  utils.py
Galaxy42_inputs/Boltz/: 8v9w.fasta
Galaxy42_inputs/RFAA/: 8v9w.yaml
Galaxy42_inputs/RFAA/fastas/: 8v9w_lig.fasta  8v9w_prot.fasta
Galaxy42_inputs/runners/: Boltz_runner.sh  RFAA_runner.sh
predictor_templates/: af3.py  boltz1.py  boltz1x.py  chai.py  jobscripts_templates.py  omegafold.py  rfaa.py
src/predictorVerse/: info.py  jobscripts.py  main.py  utils.py
src/predictorVerse/funcs/: mol_to_CCD.py
src/predictorVerse/predictor_templates/: af3.py  boltz1.py  boltz1x.py  boltz2.py  boltz2_affinity.py  chai.py  jobscripts_templates.py  omegafold.py  protenix.py  rf3.py  rf3_sdf.py  rfaa.py
test/: test.json
test/AF3/inputs/: sys1.json  sys2.json  sys3.json  sys4.json
test/AF3/runners/: AF3_jobarray.sh  AF3_runner.sh
test/RFAA/inputs/: sys1.yaml  sys2.yaml  sys3.yaml  sys4.yaml
test/RFAA/inputs/fastas/: sys1_lig0.sdf  sys1_prot0.fasta  sys1_prot1.fasta  sys2_lig0.sdf  sys2_prot0.fasta  sys3_prot0.fasta  sys3_prot1.fasta  sys4_lig1.sdf
test/RFAA/runners/: RFAA_runner.sh
